--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="установка Windows Астана, переустановка Виндовс, Виндоус, виндовс, программист, обслуживание компьютеров и ноутбуков Астана, сброс пароля, восстановление данных, активация Windows, активация Microsoft Office, Word, Excel, Power Point">
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="x_5DqPc7KsfH1PyiGbsFCdmn2lodm04DCiM6SeN2g3I" />
+    <meta name="yandex-verification" content="aabd1808ad609149" />
     <style>
         .services-grid {
             display: grid;
